# Enactome

./: .gitignore  CANONICAL_DEMO.md  CITATIONS.bib  EXPERIMENTS.md  INSTALL.md  LICENSE  NEURON_MODELS.md  README.md  pyproject.toml
electron/: main.js  package.json  preload.js
electron/src/: app.js  index.html  studio.css  studio.js
electron/test/: README.md  test_frontend.js
enactome_core/: __init__.py  arena.py  atlas.py  connectome.py  experiments.py  llm.py  mb_behavior.py  model.py  olfaction.py
enactome_core/data/: atlas_bundle.json  cx_heading_facts.json  cx_heading_system.npz  disease_genetics_bundle.json  fb_W_kc_mbon.npz  fb_W_pn_kc.npz  fb_W_pn_lhon.npz  fb_dan_comp.npz  fb_meta.npz
enactome_core/neurons/: __init__.py  backend.py  rate.py  spiking.py  synapse.py
paper/: CITATIONS.bib  enactome_manuscript.tex
server/: app.py
tests/: test_engine.py
video/: .gitignore  README.md  assemble.py  build_video.sh  make_frames.py  make_music.py  record_ui.py  storyboard.json
