[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enactome-core"
version = "0.4.0"
description = "Connectome-constrained brain simulation platform (current incarnation: Drosophila)"
readme = "README.md"
authors = [{name = "Mehmet Kerem Turkcan", email = "mkt2126@columbia.edu"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "networkx>=3.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
gpu = ["torch>=2.0"]           # optional: enables the CUDA backend for rate/LIF models
llm = ["anthropic>=0.40"]      # optional: enables the /llm/ask Claude planning endpoint
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["enactome_core", "enactome_core.analyses", "enactome_core.neurons"]

[tool.setuptools.package-data]
enactome_core = ["data/*.json", "data/*.npz"]
